--- a/config/database.yml
+++ b/config/database.yml
@@ -14,13 +14,14 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  database: local_news_test
   pool: 5
   timeout: 5000
+  username: postgres
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: db/local_news_production
   pool: 5
   timeout: 5000
