--- a/config/database.yml
+++ b/config/database.yml
@@ -18,7 +18,7 @@ test:
   database: local_news_test
   pool: 5
   timeout: 5000
-  username: postgres
+  username: shiva
 
 production:
   adapter: postgresql
